[gd_scene load_steps=2 format=3 uid="uid://ogtf4xhup2vi"]

[ext_resource type="Script" uid="uid://470x4heo6qy4" path="res://pause_menu.gd" id="1_hdmo1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hdmo1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 660.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 1168.0
offset_bottom = 667.0
color = Color(0, 0, 0, 0.24705882)

[node name="MainButtons" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 169.0
offset_top = 288.0
offset_right = 948.0
offset_bottom = 416.0

[node name="PAUSE" type="Label" parent="Control/Panel/MainButtons"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="go_back_game_Button" type="Button" parent="Control/Panel/MainButtons"]
layout_mode = 2
text = "ゲームに戻る"

[node name="ToSaveMenuButton" type="Button" parent="Control/Panel/MainButtons"]
layout_mode = 2
text = "セーブする"

[node name="go_to_title_Button" type="Button" parent="Control/Panel/MainButtons"]
layout_mode = 2
text = "タイトルへ"

[node name="SaveSlotsMenu" type="VBoxContainer" parent="Control/Panel"]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 429.0
offset_right = 786.0
offset_bottom = 621.0

[node name="Label" type="Label" parent="Control/Panel/SaveSlotsMenu"]
layout_mode = 2
text = "セーブするスロットを選んでください"

[node name="Slot1_Button" type="Button" parent="Control/Panel/SaveSlotsMenu"]
layout_mode = 2

[node name="Slot2_Button" type="Button" parent="Control/Panel/SaveSlotsMenu"]
layout_mode = 2

[node name="Slot3_Button" type="Button" parent="Control/Panel/SaveSlotsMenu"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Control/Panel/SaveSlotsMenu"]
layout_mode = 2
text = "戻る"

[node name="SEPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/Panel/MainButtons/go_back_game_Button" to="." method="_on_go_back_game_button_pressed"]
[connection signal="pressed" from="Control/Panel/MainButtons/ToSaveMenuButton" to="." method="_on_to_save_menu_button_pressed"]
[connection signal="pressed" from="Control/Panel/MainButtons/go_to_title_Button" to="." method="_on_go_to_title_button_pressed"]
[connection signal="pressed" from="Control/Panel/SaveSlotsMenu/BackButton" to="." method="_on_back_button_pressed"]
